Latest CVS changes - 10/01/08:
  - Added support for MPEG-4 over MPEG-2 TS in mp42ts (MPEG-4 SL in MPEG-2 PES)
  - Fixed support for AVC/H264 over MPEG-2 TS import in ISO Media and in the player. Only one PPS/SPS is allowed 
  - Added support for offscreen GL rendering on symbian using PBuffers
  - SVG fonts should now be quite stable, but does not support kerning
  - Moved all Font modules to the new glyph-based architecture 
  - Moved SVG text to new glyph-based renderer, added support for OpenGL drawing and textured mode
  - Added support for AVC/H264 in mp4_streamer
  - Added support of MPEG-4 systems over MPEG-2
  - Added extended version of "-node" switch in MP4Box, to get the list of possible nodes. For insatnce, "MP4Box -node Anchor.children"
  - Initial commit of new glyph-based font manager - only MPEG-4 text uses it at the current time.
  You MUST have the FreeType plugin enabled for that.
      The goal here is to integrate SVG fonts quite seamlessly.
  - Misc fixes in SVG rendering with OpenGL
  - Renderer modules have been removed from GPAC. The new integrated 2D+3D renderer has been moved to libgpac and is now 
      called "compositor". Some renaming has been done in the process to clarify a bit some functions.
      NOTE: EVC3 and MSVC8 projects have not been updated yet
      
  - added support for TrackSelection (tsel) - (c) 2007 ENST & RresonateMP4 - cf MP4Box -h general
  - added support for PASP in ISO files
  - misc fixes in render_full module
  - committed patch fixing VobSub extraction bug
  - added support for http playback in ffmpeg demuxer
  - initial commit of the new renderer module (render_full, "GPAC Full Renderer"), which is a merge of both 2D and 3D renderer
  with support for offscreen OpenGL, when available. Offscreen rendering is still experimental and only works under Windows at the current time. 
  This is a temporary version, the goal is to replace all renderer modules by this single renderer integrated in libgpac.
  